# fastapi-auth-mini

./: .gitignore  README.md  pyproject.toml  test.db
app/: auth.py  db.py  dependencies.py  main.py  models.py  schemas.py
